# contracts/openapi/openapi.v1.yaml
@@ -1221,10 +1221,6 @@ components:
         hotspot_binding_active:
           type: boolean
           nullable: true
-        hotspot_session_active:
-          type: boolean
-          nullable: true
-          deprecated: true
         hotspot_username:
           type: string
           nullable: true
@@ -1247,10 +1243,6 @@ components:
         hotspot_binding_active:
           type: boolean
           nullable: true
-        hotspot_session_active:
-          type: boolean
-          nullable: true
-          deprecated: true
 
     UserMeResponse:
       type: object
